# controller-to-mouse

./: .gitignore  Cargo.toml  README.md  build.ps1
src/: .gitignore  inputs.rs  main.rs  settings.rs  tray.rs
