[package]
name = "controller_app"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_UI_Input_XboxController",
  "Win32_UI_Input_KeyboardAndMouse",
] }
eframe = "0.26"
tray-icon = "0.14"
image = "0.25"
anyhow = "1"
tao = "0.28"
directories = "5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
